--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.4.2",
+    "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
+    "mongodb": "^6.8.0",
+    "mysql2": "^3.11.0",
+    "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.26"
   }
 }
